// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas del componente GifGrid.js Debe de mostrarse correctamente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Holaa
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Pruebas del componente GifGrid.js should change the snapshot when useFetchGifs is executed 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Holaa
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="ABC Title"
      url="https://google.com"
    />
  </div>
</Fragment>
`;
